--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="toolbar">
+  <div id="toolbar" class="toolbar">
     <a href="home.html" class="toolbar__link">
       <img alt="Sfeir" src="assets/img/logo.svg">
     </a>
