chore(html): rename home file to index

--- a/list.html
+++ b/list.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="toolbar" id="toolbar">
-    <a href="home.html" class="toolbar__link">
+    <a href="index.html" class="toolbar__link">
       <img alt="Sfeir" src="assets/img/logo.svg">
     </a>
     <a href="list.html" class="toolbar__link">List</a>
