--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>CSS-100</title>
+  <title>SFEIR SCHOOL CSS 200</title>
   <base href=".">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
